--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <div class="container">
       <section class="section preview">
         <p class="section__title">Виконуємо комплексну високоточну металообробку на верстатах з ЧПУ</p>
-        <p class="preview__text">Надаємо комплекс послуг з обробки металу —
+        <p class="section__text">Надаємо комплекс послуг з обробки металу —
           <a class="preview__link" href="#">лазерна порізка,</a>
           <a class="preview__link" href="#">гнуття деталей,</a>
           <a class="preview__link" href="#">зварювання</a>
@@ -98,7 +98,7 @@
           високої складності. Виробництво деталей для важкої і легкої промисловості, а також складних і відповідальних
           компонентів для точного обладнання.
         </p>
-        <p class="preview__text">
+        <p class="section__text">
           Своїм клієнтам ми пропонуємо швидкий попередній прорахунок і виконання замовлення, робимо все необхідне, щоб
           бути кращим партнером у сфері виготовлення металевих запчастин і деталей.
         </p>
@@ -106,155 +106,118 @@
     </div>
 
     <section class="section services">
-      <h3 class="section__title services__title">Наші послуги</h1>
-        <div class="services__container">
-          <article class="services__card">
-            <figure class="services__content">
-              <picture>
-                <img class="services__img" src="img/lazer.jpg" alt="1" width="300" height="200">
+      <h3 class="section__title services__title">Наші послуги</h3>
+      <div class="services__container">
+        <article class="services__card">
+          <figure class="services__content">
+            <picture>
+              <img class="services__img" src="img/lazer.jpg" alt="1" width="300" height="200">
 
-              </picture>
-              <figcaption class="services__figcaption">
-                <div class="services__name">
-                  <a class="services__name-link" href="#">
-                    Лазерна порізка
-                  </a>
-                </div>
-                <div class="services__hover-content">
-                  <h4 class="services__hover-title">Лазер дозволяє виконувати як легкі, так і складні деталі, гарантуючи
-                    високу точність і відмінну швидкість роботи.</h4>
-                  <a class="services__hover-text" href="#">
-                    <span class="services__hover--circle">Детальніше</span>
-                  </a>
-                  <a class="services__link" href="#"></a>
-                </div>
+            </picture>
+            <figcaption class="services__figcaption">
+              <div class="services__name">
+                <a class="services__name-link" href="#">
+                  Лазерна порізка
+                </a>
+              </div>
+              <div class="services__hover-content">
+                <h4 class="services__hover-title">Лазер дозволяє виконувати як легкі, так і складні деталі, гарантуючи
+                  високу точність і відмінну швидкість роботи.</h4>
+                <a class="services__hover-text" href="#">
+                  <span class="services__hover--circle">Детальніше</span>
+                </a>
+                <a class="services__link" href="#"></a>
+              </div>
 
-              </figcaption>
-            </figure>
-          </article>
-          <article class="services__card">
-            <figure class="services__content">
-              <picture>
-                <img class="services__img" src="img/sheet-bending.jpg" alt="sheet-bending" width="300" height="200">
+            </figcaption>
+          </figure>
+        </article>
+        <article class="services__card">
+          <figure class="services__content">
+            <picture>
+              <img class="services__img" src="img/sheet-bending.jpg" alt="sheet-bending" width="300" height="200">
 
-              </picture>
-              <figcaption class="services__figcaption">
-                <div class="services__name">
-                  <a class="services__name-link" href="#">
-                    Гнуття деталей
-                  </a>
-                </div>
-                <div class="services__hover-content">
-                  <h4 class="services__hover-title">Гнуття металу - э однією з основних сфер застосування листового
-                    металу є виготовлення виробів із зігнутих листових деталей.</h4>
-                  <a class="services__hover-text" href="#">
-                    <span class="services__hover--circle">Детальніше</span>
-                  </a>
-                  <a class="services__link" href="#"></a>
-                </div>
+            </picture>
+            <figcaption class="services__figcaption">
+              <div class="services__name">
+                <a class="services__name-link" href="#">
+                  Гнуття деталей
+                </a>
+              </div>
+              <div class="services__hover-content">
+                <h4 class="services__hover-title">Гнуття металу - э однією з основних сфер застосування листового
+                  металу є виготовлення виробів із зігнутих листових деталей.</h4>
+                <a class="services__hover-text" href="#">
+                  <span class="services__hover--circle">Детальніше</span>
+                </a>
+                <a class="services__link" href="#"></a>
+              </div>
 
-              </figcaption>
-            </figure>
-          </article>
-          <article class="services__card">
-            <figure class="services__content">
-              <picture>
-                <img class="services__img" src="img/pipe-bending.jpg" alt=" lazer" width="300" height="200">
+            </figcaption>
+          </figure>
+        </article>
+        <article class="services__card">
+          <figure class="services__content">
+            <picture>
+              <img class="services__img" src="img/powder-painting.jpg" alt="lazer" width="300" height="200">
 
-              </picture>
-              <figcaption class="services__figcaption">
-                <div class="services__name">
-                  <a class="services__name-link" href="#">
-                    Гнуття труби
-                  </a>
-                </div>
-                <div class="services__hover-content">
-                  <h4 class="services__hover-title">Ми забезпечуємо професійне гнуття труб з чорної сталі, оцинкованої
-                    сталі та нержавіючої сталі діаметром від 16 до 32 мм.</h4>
-                  <a class="services__hover-text" href="#">
-                    <span class="services__hover--circle">Детальніше</span>
-                  </a>
-                  <a class="services__link" href="#"></a>
-                </div>
-              </figcaption>
-            </figure>
-          </article>
-          <article class="services__card">
-            <figure class="services__content">
-              <picture>
-                <img class="services__img" src="img/welder.jpg" alt="lazer" width="300" height="200">
+            </picture>
+            <figcaption class="services__figcaption">
+              <div class="services__name">
+                <a class="services__name-link" href="#">
+                  Порошкове фарбування
+                </a>
+              </div>
+              <div class="services__hover-content">
+                <h4 class="services__hover-title">Порошкове фарбування металевих виробів забезпечує високу якість
+                  покриття., зберігає відмінні фізико-хімічні та оздоблювальні характеристики.</h4>
+                <a class="services__hover-text" href="#">
+                  <span class="services__hover--circle">Детальніше</span>
+                </a>
+                <a class="services__link" href="#"></a>
+              </div>
 
-              </picture>
-              <figcaption class="services__figcaption">
-                <div class="services__name">
-                  <a class="services__name-link" href="#">
-                    Зварювальні роботи
-                  </a>
-                </div>
-                <div class="services__hover-content">
-                  <h4 class="services__hover-title">Наші фахівці виконають складні зварювальні роботи, виготовлять на
-                    замовлення металоконструкції та деталі з прокату, листового металу.</h4>
-                  <a class="services__hover-text" href="#">
-                    <span class="services__hover--circle">Детальніше</span>
-                  </a>
-                  <a class="services__link" href="#"></a>
-                </div>
+            </figcaption>
+          </figure>
+        </article>
+        <article class="services__card">
+          <figure class="services__content">
+            <picture>
+              <img class="services__img" src="img/metal-products.jpg" alt="lazer" width="300" height="200">
 
-              </figcaption>
-            </figure>
-          </article>
-          <article class="services__card">
-            <figure class="services__content">
-              <picture>
-                <img class="services__img" src="img/powder-painting.jpg" alt="lazer" width="300" height="200">
-
-              </picture>
-              <figcaption class="services__figcaption">
-                <div class="services__name">
-                  <a class="services__name-link" href="#">
-                    Порошкове фарбування
-                  </a>
-                </div>
-                <div class="services__hover-content">
-                  <h4 class="services__hover-title">Порошкове фарбування металевих виробів забезпечує високу якість
-                    покриття., зберігає відмінні фізико-хімічні та оздоблювальні характеристики.</h4>
-                  <a class="services__hover-text" href="#">
-                    <span class="services__hover--circle">Детальніше</span>
-                  </a>
-                  <a class="services__link" href="#"></a>
-                </div>
-
-              </figcaption>
-            </figure>
-          </article>
-          <article class="services__card">
-            <figure class="services__content">
-              <picture>
-                <img class="services__img" src="img/metal-products.jpg" alt="lazer" width="300" height="200">
-
-              </picture>
-              <figcaption class="services__figcaption">
-                <div class="services__name">
-                  <a class="services__name-link" href="#">
-                    Вироби з металу
-                  </a>
-                </div>
-                <div class="services__hover-content">
-                  <h4 class="services__hover-title">Виконуємо нестандартні та ексклюзивні замовлення на прохання
-                    клієнтів - великих промислових підприємств, комерційних організацій і виробничих фірм.</h4>
-                  <a class="services__hover-text" href="#">
-                    <span class="services__hover--circle">Детальніше</span>
-                  </a>
-                  <a class="services__link" href="#"></a>
-                </div>
-
-              </figcaption>
-            </figure>
-          </article>
-        </div>
-
+            </picture>
+            <figcaption class="services__figcaption">
+              <div class="services__name">
+                <a class="services__name-link" href="#">
+                  Усі послуги
+                </a>
+              </div>
+              <div class="services__hover-content">
+                <h4 class="services__hover-title">Виконуємо нестандартні та ексклюзивні замовлення на прохання
+                  клієнтів - великих промислових підприємств, комерційних організацій і виробничих фірм.</h4>
+                <a class="services__hover-text" href="#">
+                  <span class="services__hover--circle">Детальніше</span>
+                </a>
+                <a class="services__link" href="#"></a>
+              </div>
+            </figcaption>
+          </figure>
+        </article>
+      </div>
     </section>
 
+    <section class="section principle">
+      <div class="container">
+        <h3 class="section__title principle__title">Наші принципи</h3>
+        <section class="section principle">
+          <p class="section__text principle__text">В своїй роботі ми дотримуємось принципів, які дозволяють нам бути
+            впевненими в тому,
+            що наші Клієнти
+            отримують кращий продукт з високим рівнем сервісу. Ми не просто виготовляємо металеві конструкції – ми
+            вирішуємо задачі
+            наших Клієнтів!!!</p>
+      </div>
+    </section>
   </main>
   <footer>
   </footer>
