--- a/index.html
+++ b/index.html
@@ -206,16 +206,21 @@
       </div>
     </section>
 
-    <section class="section principle">
-      <div class="container">
-        <h3 class="section__title principle__title">Наші принципи</h3>
-        <section class="section principle">
-          <p class="section__text principle__text">В своїй роботі ми дотримуємось принципів, які дозволяють нам бути
+    <section class="section featured">
+      <div class="container ">
+        <h3 class="section__title  featured__title">Наші принципи</h3>
+        <p class="section__text featured__text">В своїй роботі ми дотримуємось принципів, які дозволяють нам бути
             впевненими в тому,
             що наші Клієнти
             отримують кращий продукт з високим рівнем сервісу. Ми не просто виготовляємо металеві конструкції – ми
             вирішуємо задачі
-            наших Клієнтів!!!</p>
+            наших Клієнтів!!!
+          </p>
+          <div class="featured__container">
+            <div class="">
+              <span class="featured__span-image"><img class="featured__image" src="img/ok.svg" alt="Okey" width="50" height="50"></span>
+            </div>
+          </div>
       </div>
     </section>
   </main>
