--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 
   <header class="header">
-    <div class="header__test">
+    <div class="header__background">
     </div>
     <ul class="nav__list nav__list-social nav__list--desktop">
       <li class="nav__item-social"><a href="tel:+380687945051" class="link-hover">+38 (068) 999 99</a></li>
@@ -212,9 +212,10 @@
     </section>
 
     <section class="section section--featured">
+
       <div class="container">
         <h3 class="section__title">Наші принципи</h3>
-        <p class="section__text section--featured-text">В своїй роботі ми дотримуємось принципів, які дозволяють нам
+        <p class="section__text section--center-text">В своїй роботі ми дотримуємось принципів, які дозволяють нам
           бути
           впевненими в тому,
           що наші Клієнти
@@ -268,26 +269,38 @@
     </section>
 
     <section class="section partners">
+      <div class="partners__background">
+        <!-- <img class="partners__image" src="img/bg-document.jpg" alt=""> -->
+      </div>
       <div class="container">
+        <div>
+          <h3 class="section__title">
+            Наші партнери
+          </h3>
+
+          <p class="section__text section--center-text">Багаторічний досвід «Армаксу», професійний підхід до роботи,
+            сучасне і якісне
+            обладнання – ось за що нас обирають найкращі компанії!</p>
+        </div>
         <div class="partners__slider">
           <div class="swiper">
-            <div class="swiper-wrapper container">
-              <div class="swiper-slide"><img src="img/skf-logo.svg" alt="" height="50"></div>
-              <div class="swiper-slide"><img src="img/skf-logo.svg" alt="" height="60"></div>
-              <div class="swiper-slide"><img src="img/skf-logo.svg" alt="" height="70"></div>
-              <div class="swiper-slide"><img src="img/skf-logo.svg" alt="" height="60"></div>
-              <div class="swiper-slide"><img src="img/skf-logo.svg" alt="" height="80"></div>
-              <div class="swiper-slide"><img src="img/skf-logo.svg" alt="" height="60"></div>
-              <div class="swiper-slide"><img src="img/skf-logo.svg" alt="" height="90"></div>
-              <div class="swiper-slide"><img src="img/skf-logo.svg" alt="" height="60"></div>
+            <div class="swiper-wrapper">
+              <div class="swiper-slide"><img src="img/modern-expo.png" alt="modern-expo" width="190" height="150"></div>
+              <div class="swiper-slide"><img src="img/skf-logo.svg" alt="skf" width="190" height="150"></div>
+              <div class="swiper-slide"><img src="img/ua-bruk.png" alt="ua-bruk" width="190" height="34"></div>
+              <div class="swiper-slide"><img src="img/cvg-logo.png" alt="cvg" width="190" height="190">
+              </div>
+              <div class="swiper-slide"><img src="img/globino-logo.png" alt="" width="190" height="180">
+              </div>
+              <div class="swiper-slide"><img src="img/limo-logo.png" alt="" width="190" height="180"></div>
             </div>
-
           </div>
-          <div class="swiper-button-prev"></div>
-          <div class="swiper-button-next"></div>
+          <div class="swiper-button-prev"><img src="img/arow-prev.svg" alt="prev" width="30" height="50"></div>
+          <div class="swiper-button-next"><img src="img/arow-next.svg" alt="next" width="30" height="50"></div>
         </div>
 
       </div>
+
     </section>
   </main>
   <footer>
