--- a/index.html
+++ b/index.html
@@ -269,9 +269,6 @@
     </section>
 
     <section class="section partners">
-      <div class="partners__background">
-        <!-- <img class="partners__image" src="img/bg-document.jpg" alt=""> -->
-      </div>
       <div class="container">
         <div>
           <h3 class="section__title">
@@ -300,10 +297,33 @@
         </div>
 
       </div>
-
+      <div class="partners__background"></div>
     </section>
+
+
   </main>
-  <footer>
+  <footer class="footer">
+    <div class="footer__wrapper">
+      <div class="container footer__container">
+        <div class="footer__form">
+          <h3 class="">Надіслати запит :</h3>
+          <form action="">
+            <input class="input-name" type="text" placeholder="Ім'я">
+            <input class="input-number" type="tel" placeholder="Телефон">
+            <button class="button" type="submit">Надіслати</button>
+          </form>
+        </div>
+      </div>
+
+
+      <div class="map">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d499.6516756018472!2d30.32265311392794!3d59.93866811266318!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRltGPLCAxOTExODY!5e0!3m2!1suk!2sua!4v1613651759344!5m2!1suk!2sua"
+          style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0">
+        </iframe>
+      </div>
+    </div>
+
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
   <script src="js/index.js"></script>
