--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
     <div class="footer__wrapper">
       <div class="container footer__container">
         <div class="footer__inner">
-          <h3 class="footer__title">Ми з Вами передзвонимо:</h3>
+          <h3 class="footer__title">Залишилися питання? Ми передзвонимо!</h3>
           <form class="footer__form" action="">
             <input class="input-name" type="text" placeholder="Ім'я">
             <input class="input-number" type="tel" placeholder="Телефон">
@@ -314,13 +314,29 @@
           </form>
         </div>
       </div>
-
-
       <div class="map">
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1259.9652061668253!2d25.452380342753024!3d50.83245286357741!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47259392610572b9%3A0x3edf65d8017ef30a!2z0KLQt9Ce0JIsINCQ0YDQvNCw0LrRgSDQnNCT!5e0!3m2!1suk!2sua!4v1673270441518!5m2!1suk!2sua"
           width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
           referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
+    </div>
+    <div class="footer__bootom">
+      <div class="container">
+        <div class="info">
+          <div class="info__menu">
+            <h5 class="info__title">Меню</h5>
+            <p><a href="#" class="info__link">Послуги</a></p>
+            <p><a href="#" class="info__link">Про нас</a></p>
+            <p><a href="#" class="info__link">Контакти</a></p>
+            <p><a href="#" class="info__link">Калькуоятор металу</a></p>
+          </div>
+          <div class="info__address">
+          </div>
+          <div class="info__contact">
+          </div>
+          <div class="info__schedule"></div>
+        </div>
       </div>
     </div>
 
