--- a/index.html
+++ b/index.html
@@ -324,18 +324,34 @@
     <div class="footer__bootom">
       <div class="container">
         <div class="info">
-          <div class="info__menu">
+          <div class="info__block info__menu">
             <h5 class="info__title">Меню</h5>
-            <p><a href="#" class="info__link">Послуги</a></p>
-            <p><a href="#" class="info__link">Про нас</a></p>
-            <p><a href="#" class="info__link">Контакти</a></p>
-            <p><a href="#" class="info__link">Калькуоятор металу</a></p>
+            <p class="info__text"><a href="#">Послуги</a></p>
+            <p class="info__text"><a href="#">Про нас</a></p>
+            <p class="info__text"><a href="#">Контакти</a></p>
+            <p class="info__text"><a href="#">Калькуоятор металу</a></p>
           </div>
-          <div class="info__address">
+          <div class="info__block info__address">
+            <h5 class="info__title">Адреса</h5>
+            <p class="info__text"><a class="info__link--address" href="#">м.Луцьк</a></p>
+            <p class="info__text"><a href="#">Про нас</a></p>
+            <p class="info__text"><a href="#">Контакти</a></p>
+            <p class="info__text"><a href="#">Калькуоятор металу</a></p>
           </div>
-          <div class="info__contact">
+          <div class="info__block info__contact">
+            <h5 class="info__title">Наші контакти</h5>
+            <p class="info__text"><a href="#">Послуги</a></p>
+            <p class="info__text"><a href="#">Про нас</a></p>
+            <p class="info__text"><a href="#">Контакти</a></p>
+            <p class="info__text"><a href="#">Калькуоятор металу</a></p>
           </div>
-          <div class="info__schedule"></div>
+          <div class="info__block info__schedule">
+            <h5 class="info__title">Графік</h5>
+            <p class="info__text"><a href="#">Послуги</a></p>
+            <p class="info__text"><a href="#">Про нас</a></p>
+            <p class="info__text"><a href="#">Контакти</a></p>
+            <p class="info__text"><a href="#">Калькуоятор металу</a></p>
+          </div>
         </div>
       </div>
     </div>
