--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
           </div>
           <div class="info__block info__address">
             <h5 class="info__title">Адреса</h5>
-            <p class="info__text"><a class="info__link--address" href="#">м.Луцьк</a></p>
+            <p class="info__text"><a class="info__link--address" href="#"><span></span> м.Луцьк</a></p>
             <p class="info__text"><a href="#">Про нас</a></p>
             <p class="info__text"><a href="#">Контакти</a></p>
             <p class="info__text"><a href="#">Калькуоятор металу</a></p>
