--- a/calc.html
+++ b/calc.html
@@ -11,8 +11,11 @@
 
 <body>
 
-	<header class="header">
+	<header>
 
+		<svg>
+			<use xlink:href="#location"></use>
+		</svg>
 	</header>
 	<main class="main container">
 		<a href="index.html">головна сторінка</a>
