--- a/index.html
+++ b/index.html
@@ -16,7 +16,48 @@
 
 
 <body>
+  <svg style="display: none;">
+    <symbol id="location" viewBox="0 0 1024 1024">
+      <g>
+        <path
+          d="M512 64c-175.8 0-318.3 134.6-318.3 300.5 0 222.9 195.5 430.8 280.1 510.3 21.3 20.1 55.7 20.3 77.4 0.6 85.1-77.2 279.2-278.7 279.2-510.9C830.3 198.6 687.8 64 512 64z m0 401.1c-56.9 0-103.1-46.2-103.1-103.1S455.1 258.9 512 258.9c56.9 0 103.1 46.2 103.1 103.1S568.9 465.1 512 465.1z" />
+        <path d="M364.5 926.5a147.5 21.5 0 1 0 295 0 147.5 21.5 0 1 0-295 0Z" />
+      </g>
+    </symbol>
 
+    <symbol id="phone" viewBox="0 0 477.156 477.156">
+      <g>
+        <path d="M475.009,380.316l-2.375-7.156c-5.625-16.719-24.062-34.156-41-38.75l-62.688-17.125c-17-4.625-41.25,1.594-53.688,14.031
+          l-22.688,22.688c-82.453-22.28-147.109-86.938-169.359-169.375L145.9,161.94c12.438-12.438,18.656-36.656,14.031-53.656
+          l-17.094-62.719c-4.625-16.969-22.094-35.406-38.781-40.969L96.9,2.19c-16.719-5.563-40.563,0.063-53,12.5L9.962,48.659
+          C3.899,54.69,0.024,71.94,0.024,72.003c-1.187,107.75,41.063,211.562,117.281,287.781
+          c76.031,76.031,179.454,118.219,286.891,117.313c0.562,0,18.312-3.813,24.375-9.845l33.938-33.938
+          C474.946,420.878,480.571,397.035,475.009,380.316z" />
+      </g>
+    </symbol>
+
+    <symbol id="mail" viewBox="0 0 64 64">
+      <g>
+        <path
+          d="M63.125,9.977c-0.902-1.321-2.419-2.194-4.131-2.194H5.006c-1.676,0-3.158,0.842-4.067,2.117l31.16,25.982L63.125,9.977z" />
+        <path d="M0.006,14.328v36.889c0,2.75,2.25,5,5,5h53.988c2.75,0,5-2.25,5-5V14.461L32.099,41.09L0.006,14.328z" />
+      </g>
+    </symbol>
+
+    <symbol id="clock" viewBox="0 0 485.213 485.212">
+      <g>
+        <path d="M242.607,0C108.629,0,0.001,108.628,0.001,242.606c0,133.976,108.628,242.606,242.606,242.606
+          c133.978,0,242.604-108.631,242.604-242.606C485.212,108.628,376.585,0,242.607,0z M257.771,454.116v-29.557h-30.327v29.557
+          c-104.925-7.458-188.883-91.419-196.346-196.344h29.554v-30.327H31.098c7.463-104.928,91.421-188.886,196.346-196.349v29.554
+          h30.327V31.097c104.926,7.462,188.882,91.421,196.344,196.349h-29.552v30.327h29.552
+          C446.652,362.697,362.696,446.658,257.771,454.116z M354.226,178.163c2.072,3.615,0.83,8.266-2.782,10.368l-80.092,46.227
+          c0.691,2.577,1.582,5.066,1.582,7.848c0,16.762-13.581,30.324-30.326,30.324c-16.75,0-30.327-13.562-30.327-30.324l-82.299-47.503
+          c-7.257-4.203-9.743-13.474-5.554-20.729c4.174-7.285,13.459-9.771,20.715-5.565l82.775,47.798
+          c4.411-2.487,9.239-4.324,14.69-4.324c8.471,0,16.092,3.494,21.604,9.122l79.648-46.024
+          C347.416,173.277,352.064,174.521,354.226,178.163z" />
+      </g>
+    </symbol>
+  </svg>
   <header class="header">
     <div class="header__background">
     </div>
@@ -38,6 +79,7 @@
     </ul>
     <div class="header__container container">
       <div class="menu">
+
         <button class="burger-btn" href="#"><span></span></button>
         <h1 class="menu__title"><a class="menu__link-logo" href=" #"><img class="menu__logo" src=" img/logo.png"
               alt=""></a></h1>
@@ -56,6 +98,7 @@
               <a href="calc.html" class="link-hover">Калькулятор металу</a>
             </li>
           </ul>
+
           <ul class="nav__list nav__list-social nav__list--mobile">
             <li class="nav__item-social"><a href="tel:+380687945051" class="link-hover">+38 (068) 999 99</a></li>
             <li class="nav__item-social"><a href="mailto:lazerarmax@gmail.com"
@@ -326,32 +369,73 @@
         <div class="info">
           <div class="info__block info__menu">
             <h5 class="info__title">Меню</h5>
-            <p class="info__text"><a href="#">Послуги</a></p>
-            <p class="info__text"><a href="#">Про нас</a></p>
-            <p class="info__text"><a href="#">Контакти</a></p>
-            <p class="info__text"><a href="#">Калькуоятор металу</a></p>
+            <ul>
+              <li class="info__item"><a class="info__link" href="#">Послуги</a></li>
+              <li class="info__item"><a class="info__link" href="#">Про нас</a></li>
+              <li class="info__item"><a class="info__link" href="#">Контакти</a></li>
+              <li class="info__item"><a class="info__link" href="#">Калькуоятор металу</a></li>
+            </ul>
+          </div>
+          <div class="info__block info__schedule">
+            <h5 class="info__title">Послуги</h5>
+            <ul class="info__list">
+              <li class="info__item"><a href="#" class="info__link">Лазерна порізка</a></li>
+              <li class="info__item"><a href="#" class="info__link">Гнуття деталей</a></li>
+              <li class="info__item"><a href="#" class="info__link">Гнуття труб</a></li>
+              <li class="info__item"><a href="#" class="info__link">Порошкове фарбування</a></li>
+              <li class="info__item"><a href="#" class="info__link">Зварювальні роботи</a></li>
+
+            </ul>
           </div>
           <div class="info__block info__address">
             <h5 class="info__title">Адреса</h5>
-            <p class="info__text"><a class="info__link--address" href="#"><span></span> м.Луцьк</a></p>
-            <p class="info__text"><a href="#">Про нас</a></p>
-            <p class="info__text"><a href="#">Контакти</a></p>
-            <p class="info__text"><a href="#">Калькуоятор металу</a></p>
+            <ul class="info__list">
+              <li class="info__item">
+                <a class="info__link"
+                  href="https://www.google.com/maps/place/%D0%A2%D0%B7%D0%9E%D0%92,+%D0%90%D1%80%D0%BC%D0%B0%D0%BA%D1%81+%D0%9C%D0%93/@50.832452,25.453267,17z/data=!4m5!3m4!1s0x0:0x3edf65d8017ef30a!8m2!3d50.8324517!4d25.4532672?hl=uk">
+                  <svg class="location-svg" width="35" height="40">
+                    <use xlink:href="#location"></use>
+                  </svg>
+                  45200 м. Ківерці, вул. Грушевського 26
+                </a>
+              </li>
+              <li class="info__item info__item--color">
+                <svg class="clock-svg" width="25" height="25">
+                  <use xlink:href="#clock"></use>
+                </svg>
+                Пн - Пт 8:00 - 17:00
+              </li>
+            </ul>
           </div>
+
           <div class="info__block info__contact">
             <h5 class="info__title">Наші контакти</h5>
-            <p class="info__text"><a href="#">Послуги</a></p>
-            <p class="info__text"><a href="#">Про нас</a></p>
-            <p class="info__text"><a href="#">Контакти</a></p>
-            <p class="info__text"><a href="#">Калькуоятор металу</a></p>
+            <ul class="info__list">
+              <li class="info__item">
+                <a href="tel:+380687945051" class="info__link">
+                  <svg class="phone-svg" width="30" height="20">
+                    <use xlink:href="#phone"></use>
+                  </svg>
+                  +38 (099) 132 45 67
+                </a>
+              </li>
+              <li class="info__item">
+                <a href="tel:+380687945051" class="info__link">
+                  <svg class="phone-svg" width="30" height="20">
+                    <use xlink:href="#phone"></use>
+                  </svg>
+                  +38 (099) 132 45 67
+                </a>
+              </li>
+              <li class="info__item"><a href="mailto:lazerarmax@gmail.com" class="info__link">
+                  <svg class="mail-svg" width="30" height="20">
+                    <use xlink:href="#mail"></use>
+                  </svg>
+                  lazer.armax@gmail.com
+                </a></li>
+            </ul>
           </div>
-          <div class="info__block info__schedule">
-            <h5 class="info__title">Графік</h5>
-            <p class="info__text"><a href="#">Послуги</a></p>
-            <p class="info__text"><a href="#">Про нас</a></p>
-            <p class="info__text"><a href="#">Контакти</a></p>
-            <p class="info__text"><a href="#">Калькуоятор металу</a></p>
-          </div>
+
         </div>
       </div>
     </div>
@@ -362,5 +446,9 @@
 
 
 </body>
+
+
+
+
 
 </html>
