--- a/index.html
+++ b/index.html
@@ -77,18 +77,26 @@
     <div class="header__background">
     </div>
     <ul class="nav__list nav__list-social nav__list--desktop">
-      <li class="nav__item-social"><a href="tel:+380687945051" class="link-hover">+38 (068) 999 99</a></li>
-      <li class="nav__item-social"><a href="mailto:lazerarmax@gmail.com" class="link-hover">
-
-          lazerarmax@gmail.com</a>
+      <li class="nav__item-social">
+        <a href="tel:+380687945051" class="link-hover">
+          +38 (068) 999 99
+        </a>
       </li>
-
-      <li class="nav__item-social"><a href="https://www.facebook.com/armaxMG/" class="link-social">
-      <li class="nav__item-social nav__item--telegram"><a href="tg://resolve?domain=dimaKromiak"
-          class="link-social"><img src="img/telegram.png" alt="telegram"></a>
+      <li class="nav__item-social">
+        <a href="mailto:lazerarmax@gmail.com" class="link-hover">
+          lazerarmax@gmail.com
+        </a>
       </li>
-      <li class="nav__item-social"><a href="tel:+380687945051" class="link-social"><img src="img/phone.png"
-            alt="phone"></a></li>
+      <!-- <li class="nav__item-social nav__item--telegram">
+        <a href="tg://resolve?domain=dimaKromiak" class="link-social">
+          <img src="img/telegram.png" alt="telegram">
+        </a>
+      </li> -->
+      <li class="nav__item-social">
+        <a href="tel:+380687945051" class="link-social">
+          <img src="img/phone.png" alt="phone">
+        </a>
+      </li>
 
       <li class="nav__item-social nav__item---info">Контактна інформація</li>
 
@@ -118,7 +126,7 @@
           <ul class="nav__list nav__list-social">
             <li class="nav__item-social">
               <a class="link-social" href="tel:+380687945051">
-                <svg class="phone-svg" width="30" height="20">
+                <svg class="link-social--svg" width="30" height="20">
                   <use xlink:href="#phone"></use>
                 </svg>
                 +38 (099) 132 45 67
@@ -126,25 +134,26 @@
             </li>
             <li class="nav__item-social">
               <a href="mailto:lazerarmax@gmail.com" class="link-social">
-                <svg class="mail-svg" width="30" height="20">
+                <svg class="link-social--svg" width="30" height="20">
                   <use xlink:href="#mail"></use>
                 </svg>
                 lazerarmax@gmail.com
               </a>
             </li>
             <li class="nav__item-social">
-              <a href="https://www.facebook.com/armaxMG/" class="link-social">
-                <svg class="header-svg" width="30" height="20">
+              <a href="#" class="link-social">
+                <svg class="link-social--svg" width="30" height="20">
                   <use xlink:href="#facebook"></use>
                 </svg>
+                facebook.com/armaxMG/
               </a>
             </li>
             <li class="nav__item-social">
               <a href="#" class="link-social">
-                <svg class="header-svg" width="30" height="20">
+                <svg class="link-social--svg" width="30" height="30">
                   <use xlink:href="#location"></use>
                 </svg>
-                45200 м. Ківерці, вул. Грушевського 26
+                45200 м. Ківерці, вул.Грушевського 26
               </a>
             </li>
           </ul>
@@ -380,21 +389,74 @@
       </div>
       <div class="partners__background"></div>
     </section>
+    <section class="calculation">
+      <div class="calculation__inner ">
+        <div class="container">
+          <div class="calculation__content">
+            <h3 class="section__title">Замовити прорахунок проекту</h3>
+            <ul class="calculation__list">
+              <li class="calculation__item">
+                <p class="calculation__text">
+                  Для швидкого прорахунку вартості замовлення, завантажте креслення готових
+                  деталей та їх плоскої розгортки у форматі DWG або DXF за допомогою форми або надішліть їх на пошту
+                  info@magnet.com.ua.
+                </p>
+              </li>
+              <li class="calculation__item">
+                <p class="calculation__text">
+                  Разом із кресленнями вкажіть номер деталей на Вашому виробництві, тип матеріалу, його марку, товщину
+                  матеріалу, і кількість деталей кожного типу.
+                </p>
+              </li>
+              <li class="calculation__item">
+                <p class="calculation__text">
+                  У назві файлу не використовуйте спеціальні символи (лапки, дужки, тире), та символи кирилицею.
+                </p>
+              </li>
+              <li class="calculation__item">
+                <p class="calculation__text">
+                  Креслення повинні бути виконані прямими, дугами і полілініями. Не
+                  допускається використання сплайнів. Вкажіть Ваші контакти (електронна пошта, телефон), щоб ми могли з
+                  вами зв'язатися.
+                </p>
+              </li>
+            </ul>
+          </div>
+          <div class="calculation__form">
+            <form method="post">
+              <input class="input-name" type="text" placeholder="Ім'я">
+              <input class="input-number" type="tel" placeholder="Телефон">
+              <input class="" type="email" placeholder="Електронна пошта">
+              <textarea class="form-textarea" cols="40" rows="10" placeholder="Коментар до замовлення"></textarea>
+              <label class="calculation__label" for="file">Завантажити файл:</label>
+              <input type="file" id="file" multiple>
+
+              <button class="button header__content-button" type="submit">Надіслати</button>
+            </form>
+          </div>
+
+        </div>
+      </div>
 
 
-  </main>
-  <footer class="footer">
-    <div class="footer__wrapper">
-      <div class="container footer__container">
+
+
+
+      <!-- <div class="footer__container">
         <div class="footer__inner">
-          <h3 class="footer__title">Залишилися питання? Ми передзвонимо!</h3>
+          <h3 class="footer__title">Замовити розрахунок проекту</h3>
           <form class="footer__form" action="">
             <input class="input-name" type="text" placeholder="Ім'я">
             <input class="input-number" type="tel" placeholder="Телефон">
             <button class="button footer__button" type="submit">Надіслати</button>
           </form>
         </div>
-      </div>
+      </div> -->
+    </section>
+  </main>
+  <footer class="footer">
+    <div class="footer__wrapper">
+
       <div class="map">
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1259.9652061668253!2d25.452380342753024!3d50.83245286357741!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47259392610572b9%3A0x3edf65d8017ef30a!2z0KLQt9Ce0JIsINCQ0YDQvNCw0LrRgSDQnNCT!5e0!3m2!1suk!2sua!4v1673270441518!5m2!1suk!2sua"
@@ -429,12 +491,11 @@
             <h5 class="info__title">Адреса</h5>
             <ul class="info__list">
               <li class="info__item">
-                <a class="info__link"
-                  href="https://www.google.com/maps/place/%D0%A2%D0%B7%D0%9E%D0%92,+%D0%90%D1%80%D0%BC%D0%B0%D0%BA%D1%81+%D0%9C%D0%93/@50.832452,25.453267,17z/data=!4m5!3m4!1s0x0:0x3edf65d8017ef30a!8m2!3d50.8324517!4d25.4532672?hl=uk">
-                  <svg class="location-svg" width="35" height="40">
+                <a href="#" class="link-social">
+                  <svg class="link-social--svg" width="30" height="30">
                     <use xlink:href="#location"></use>
                   </svg>
-                  45200 м. Ківерці, вул. Грушевського 26
+                  45200 м. Ківерці, вул.Грушевського 26
                 </a>
               </li>
               <li class="info__item info__item--color">
@@ -450,30 +511,32 @@
             <h5 class="info__title">Наші контакти</h5>
             <ul class="info__list">
               <li class="info__item">
-                <a href="tel:+380687945051" class="info__link">
-                  <svg class="phone-svg" width="30" height="20">
+                <a class="link-social" href="tel:+380687945051">
+                  <svg class="link-social--svg" width="30" height="20">
                     <use xlink:href="#phone"></use>
                   </svg>
                   +38 (099) 132 45 67
                 </a>
               </li>
               <li class="info__item">
-                <a href="tel:+380687945051" class="info__link">
-                  <svg class="phone-svg" width="30" height="20">
+                <a class="link-social" href="tel:+380687945051">
+                  <svg class="link-social--svg" width="30" height="20">
                     <use xlink:href="#phone"></use>
                   </svg>
                   +38 (099) 132 45 67
                 </a>
               </li>
-              <li class="info__item"><a href="mailto:lazerarmax@gmail.com" class="info__link">
-                  <svg class="mail-svg" width="30" height="20">
+              <li class="info__item">
+                <a href="mailto:lazerarmax@gmail.com" class="link-social">
+                  <svg class="link-social--svg" width="30" height="20">
                     <use xlink:href="#mail"></use>
                   </svg>
-                  lazer.armax@gmail.com
+                  lazerarmax@gmail.com
                 </a>
               </li>
-              <li class="info__item"><a href="#" class="info__link">
-                  <svg class="" width="30" height="20">
+              <li class="info__item">
+                <a href="#" class="link-social">
+                  <svg class="link-social--svg" width="30" height="20">
                     <use xlink:href="#facebook"></use>
                   </svg>
                   facebook.com/armaxMG/
