--- a/index.html
+++ b/index.html
@@ -77,28 +77,7 @@
     <div class="header__background">
     </div>
     <ul class="nav__list nav__list-social nav__list--desktop">
-      <li class="nav__item-social">
-        <a href="tel:+380687945051" class="link-hover">
-          +38 (068) 999 99
-        </a>
       </li>
-      <li class="nav__item-social">
-        <a href="mailto:lazerarmax@gmail.com" class="link-hover">
-          lazerarmax@gmail.com
-        </a>
-      </li>
-      <!-- <li class="nav__item-social nav__item--telegram">
-        <a href="tg://resolve?domain=dimaKromiak" class="link-social">
-          <img src="img/telegram.png" alt="telegram">
-        </a>
-      </li> -->
-      <li class="nav__item-social">
-        <a href="tel:+380687945051" class="link-social">
-          <img src="img/phone.png" alt="phone">
-        </a>
-      </li>
-
-      <li class="nav__item-social nav__item---info">Контактна інформація</li>
 
     </ul>
     <div class="header__container container">
@@ -145,7 +124,7 @@
                 <svg class="link-social--svg" width="30" height="20">
                   <use xlink:href="#facebook"></use>
                 </svg>
-                facebook.com/armaxMG/
+                <span class="none">facebook.com/armaxMG/</span>
               </a>
             </li>
             <li class="nav__item-social">
@@ -399,7 +378,7 @@
                 <p class="calculation__text">
                   Для швидкого прорахунку вартості замовлення, завантажте креслення готових
                   деталей та їх плоскої розгортки у форматі DWG або DXF за допомогою форми або надішліть їх на пошту
-                  info@magnet.com.ua.
+                  lazerarmax@gmail.com
                 </p>
               </li>
               <li class="calculation__item">
@@ -429,7 +408,7 @@
               <input class="" type="email" placeholder="Електронна пошта">
               <textarea class="form-textarea" cols="40" rows="10" placeholder="Коментар до замовлення"></textarea>
               <label class="calculation__label" for="file">Завантажити файл:</label>
-              <input type="file" id="file" multiple>
+              <input class="calculation__input-file" type="file" id="file">
 
               <button class="button header__content-button" type="submit">Надіслати</button>
             </form>
