--- a/index.html
+++ b/index.html
@@ -74,15 +74,49 @@
   </svg>
 
   <header class="header">
+    <ul class="nav__list--desktop container">
+      <li class="nav__item-social">
+        <a class="link-social" href="tel:+380687945051">
+          <svg class="link-social--svg" width="30" height="20">
+            <use xlink:href="#phone"></use>
+          </svg>
+          +38 (099) 132 45 67
+        </a>
+      </li>
+      <li class="nav__item-social">
+        <a href="mailto:lazerarmax@gmail.com" class="link-social">
+          <svg class="link-social--svg" width="30" height="20">
+            <use xlink:href="#mail"></use>
+          </svg>
+          lazerarmax@gmail.com
+        </a>
+      </li>
+      <li class="nav__item-social">
+        <a href="#" class="link-social">
+          <svg class="link-social--svg" width="30" height="20">
+            <use xlink:href="#facebook"></use>
+          </svg>
+          <span class="none">facebook.com/armaxMG/</span>
+        </a>
+      </li>
+      <li class="nav__item-social">
+        <a href="#" class="link-social">
+          <svg class="link-social--svg" width="30" height="30">
+            <use xlink:href="#location"></use>
+          </svg>
+          <span class="none">45200 м. Ківерці, вул.Грушевського 26</span>
+        </a>
+      </li>
+      </li>
+    </ul>
+
+
+
     <div class="header__background">
     </div>
-    <ul class="nav__list nav__list-social nav__list--desktop">
-      </li>
 
-    </ul>
     <div class="header__container container">
       <div class="menu">
-
         <button class="burger-btn" href="#"><span></span></button>
         <h1 class="menu__title"><a class="menu__link-logo" href=" #"><img class="menu__logo" src=" img/logo.png"
               alt=""></a></h1>
@@ -132,12 +166,14 @@
                 <svg class="link-social--svg" width="30" height="30">
                   <use xlink:href="#location"></use>
                 </svg>
-                45200 м. Ківерці, вул.Грушевського 26
+                <span class="none">45200 м. Ківерці, вул.Грушевського 26</span>
               </a>
             </li>
           </ul>
         </nav>
       </div>
+
+
       <div class="header__content--container">
         <div class="header__content header__inner">
           <h1 class="header__content-title">
