--- a/index.html
+++ b/index.html
@@ -74,45 +74,47 @@
   </svg>
 
   <header class="header">
-    <ul class="nav__list--desktop container">
-      <li class="nav__item-social">
-        <a class="link-social" href="tel:+380687945051">
-          <svg class="link-social--svg" width="30" height="20">
-            <use xlink:href="#phone"></use>
-          </svg>
-          +38 (099) 132 45 67
-        </a>
-      </li>
-      <li class="nav__item-social">
-        <a href="mailto:lazerarmax@gmail.com" class="link-social">
-          <svg class="link-social--svg" width="30" height="20">
-            <use xlink:href="#mail"></use>
-          </svg>
-          lazerarmax@gmail.com
-        </a>
-      </li>
-      <li class="nav__item-social">
-        <a href="#" class="link-social">
-          <svg class="link-social--svg" width="30" height="20">
-            <use xlink:href="#facebook"></use>
-          </svg>
-          <span class="none">facebook.com/armaxMG/</span>
-        </a>
-      </li>
-      <li class="nav__item-social">
-        <a href="#" class="link-social">
-          <svg class="link-social--svg" width="30" height="30">
-            <use xlink:href="#location"></use>
-          </svg>
-          <span class="none">45200 м. Ківерці, вул.Грушевського 26</span>
-        </a>
-      </li>
-      </li>
-    </ul>
-
-
-
     <div class="header__background">
+    </div>
+
+    <div class="nav__social--desktop-wrap">
+      <div class="nav__social--desktop container">
+        <ul class="nav__social-list--desktop">
+          <li class="nav__social-item">
+            <a class="link-social" href="tel:+380687945051">
+              <svg class="link-social--svg" width="30" height="20">
+                <use xlink:href="#phone"></use>
+              </svg>
+              +38 (099) 132 45 67
+            </a>
+          </li>
+          <li class="nav__social-item">
+            <a href="mailto:lazerarmax@gmail.com" class="link-social">
+              <svg class="link-social--svg" width="30" height="20">
+                <use xlink:href="#mail"></use>
+              </svg>
+              lazerarmax@gmail.com
+            </a>
+          </li>
+        </ul>
+        <ul class="nav__social-list--desktop nav__social-list--svg">
+          <li class="nav__social-item">
+            <a href="#" class="link-social">
+              <svg class="link-social--svg" width="33" height="35">
+                <use xlink:href="#facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="nav__social-item">
+            <a href="#" class="link-social">
+              <svg class="link-social--svg" width="40" height="35">
+                <use xlink:href="#location"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+     
     </div>
 
     <div class="header__container container">
